...
            "state": "translated",
            "value": "显示与保存"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "完了"
          }
...
            "state": "translated",
            "value": "请选择一个项目"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
...
            "state": "translated",
            "value": "无法拍摄照片。"
          }
        }
      }
    },
    "Transformations": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "変身"
          }
...
